--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <title>My Tech Blog</title>
   </head>
   <body>
-    <h1>Hello 👋</h1>
+    <h1>Oracle-GoldenGate</h1>
     <p>This is my new tech blog.</p>
+
+    <ul>
+      <li><a href="OGG%20Oracle-to-BigQuery%20stream/">OGG Oracle-to-BigQuery stream</a></li>
+      <li><a href="OGG%20Oracle-to-BigQuery/">OGG Oracle-to-BigQuery</a></li>
+      <li><a href="OGG%20Oracle-to-Confluent/">OGG Oracle-to-Confluent</a></li>
+    </ul>
   </body>
 </html>
