Add image to Oracle-to-BigQuery stream link

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <p>This is my new tech blog.</p>
 
     <ul>
-      <li><a href="OGG%20Oracle-to-BigQuery%20stream/">OGG Oracle-to-BigQuery stream</a></li>
+      <li><a href="OGG%20Oracle-to-BigQuery%20stream/">OGG Oracle-to-BigQuery stream</a>
+        <img src="OGG%20Oracle-to-BigQuery%20stream/OGG%Oracle-to-BigQuery%stream.jpg" alt="Architecture" width="400">
+      </li>
       <li><a href="OGG%20Oracle-to-BigQuery/">OGG Oracle-to-BigQuery</a></li>
       <li><a href="OGG%20Oracle-to-Confluent/">OGG Oracle-to-Confluent</a></li>
     </ul>
